--- a/dbc/quickstart/tsconfig.json
+++ b/dbc/quickstart/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
       "composite": true,                                   
-      "target": "es2016",                                 
-      "module": "commonjs",                                
+      "target": "es2020",                                 
+      "module": "esnext",                                
       "moduleResolution": "node",                     
       "declaration": true,                                
       "sourceMap": true,                                 
@@ -10,7 +10,9 @@
       "esModuleInterop": true,                            
       "forceConsistentCasingInFileNames": true,           
       "strict": true,                                      
-      "skipLibCheck": true                                
-    }
+      "skipLibCheck": true,
+      "resolveJsonModule": true
+    },
+    "include": ["src/**/*", "config.ts"]
   }
   
