feat: added dbc scripts

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 dbc/quickstart/node_modules
 dbc/quickstart/package-lock.json
 dbc/quickstart/.env
+
+dbc/scripts/node_modules
+dbc/scripts/package-lock.json
+dbc/scripts/.env
