feat: Added quicklaunch

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # dbc
+dbc/quicklaunch/node_modules
+dbc/quicklaunch/package-lock.json
+dbc/quicklaunch/.env
+
 dbc/quickstart/node_modules
 dbc/quickstart/package-lock.json
 dbc/quickstart/.env
