--- a/dbc/quickstart/tsconfig.json
+++ b/dbc/quickstart/tsconfig.json
@@ -13,6 +13,6 @@
       "skipLibCheck": true,
       "resolveJsonModule": true
     },
-    "include": ["src/**/*", "examples/**/*", "config.ts"]
+    "include": ["src/**/*", "examples/**/*"]
   }
   
