fix: Updated for rate limiter

--- a/dbc/scripts/package.json
+++ b/dbc/scripts/package.json
@@ -18,15 +18,14 @@
     "description": "This folder contains examples for interacting with Meteora's Dynamic Bonding Curve.",
     "dependencies": {
         "@coral-xyz/anchor": "^0.31.1",
+        "@meteora-ag/dynamic-bonding-curve-sdk": "^1.2.4",
         "@solana/spl-token": "^0.4.13",
         "@solana/web3.js": "^1.98.2",
         "bn.js": "^5.2.1",
         "bs58": "^6.0.0",
         "decimal.js": "^10.5.0",
         "dotenv": "^16.5.0",
-        "jito-ts": "latest",
-        "@meteora-ag/dynamic-bonding-curve-sdk": "1.2.3"
-
+        "jito-ts": "latest"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.6",
