--- a/dbc/tsconfig.json
+++ b/dbc/tsconfig.json
@@ -13,6 +13,6 @@
       "skipLibCheck": true,
       "resolveJsonModule": true
     },
-    "include": ["src/**/*", "examples/**/*"]
-  }
+    "include": ["quickstart/**/*", "quicklaunch/**/*", "scripts/**/*"]
+}
   
