--- a/damm-v2/package.json
+++ b/damm-v2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meteora-damm-v2-examples",
+  "name": "meteora-studio-damm-v2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,14 +11,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.0",
+    "@coral-xyz/anchor": "^0.31.1",
     "@meteora-ag/cp-amm-sdk": "^1.0.10",
     "@solana/spl-token": "^0.4.13",
-    "@solana/web3.js": "^1.98.0",
+    "@solana/web3.js": "^1.98.2",
     "bs58": "^6.0.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.5.0"
   },
   "devDependencies": {
     "tsx": "^4.19.3"
   }
 }
+
+
