--- a/damm/package.json
+++ b/damm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meteora-damm-examples",
+  "name": "meteora-studio-damm-v1",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,16 +12,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.0",
+    "@coral-xyz/anchor": "^0.31.1",
     "@mercurial-finance/dynamic-amm-sdk": "^1.1.23",
     "@mercurial-finance/vault-sdk": "^2.2.1",
     "@meteora-ag/dynamic-amm-sdk": "^1.3.5-rc.0",
     "@solana/spl-token": "^0.4.13",
-    "@solana/web3.js": "^1.98.0",
+    "@solana/web3.js": "^1.98.2",
     "bs58": "^6.0.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.5.0"
   },
   "devDependencies": {
     "tsx": "^4.19.3"
   }
 }
+
