--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# dbc
+.DS_Store
+.env
 
 dbc/node_modules
 dbc/package-lock.json
@@ -6,17 +7,15 @@ dbc/.env
 dbc/.DS_Store
 
 
-damm/node_modules
-damm/package-lock.json
-damm/.env
-damm/.DS_Store
+damm-v1/node_modules
+damm-v1/package-lock.json
+damm-v1/.DS_Store
 
 damm-v2/node_modules
 damm-v2/package-lock.json
-damm-v2/.env
 damm-v2/.DS_Store
 
 damm-v2/create-pool/node_modules
 damm-v2/create-pool/package-lock.json
-damm-v2/create-pool/.env
 damm-v2/create-pool/.DS_Store
+
