--- a/dlmm/package.json
+++ b/dlmm/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "meteora-studio-dlmm",
+  "name": "meteora-dlmm-examples",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "create-balance-position": "tsx create-position/src/balance.ts",
-    "create-imbalance-position": "tsx create-position/src/imbalance.ts",
-    "create-one-sided-position": "tsx create-position/src/one-sided.ts",
-    "get-active-bin": "tsx get-position/src/get-active-bin.ts",
-    "get-positions-list": "tsx get-position/src/get-positions-list.ts",
+    "create-balance-position": "tsx src/create-position/balance.ts",
+    "create-imbalance-position": "tsx src/create-position/imbalance.ts",
+    "create-one-sided-position": "tsx src/create-position/one-sided.ts",
+    "get-active-bin": "tsx src/get-position/get-active-bin.ts",
+    "get-positions-list": "tsx src/get-position/get-positions-list.ts",
     "add-liquidity": "tsx src/manage-position/add-liquidity.ts"
   },
   "keywords": [],
@@ -18,10 +18,10 @@
     "tsx": "^4.19.3"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1",
+    "@coral-xyz/anchor": "^0.31.0",
     "@meteora-ag/dlmm": "^1.4.7",
-    "@solana/web3.js": "^1.98.2",
+    "@solana/web3.js": "^1.98.0",
     "bs58": "^6.0.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.4.7"
   }
 }
