--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
       "validate-env": "tsx validate-env.ts",
 
       "damm-v1-create-constant-product-pool": "tsx damm-v1/create-pool/src/constant-product.ts",
-      "damm-v1-claim-lock-fees": "tsx damm-v1/claim-fees/src/claim-position-fees.ts",
-      "damm-v1-get-lock-fees": "tsx damm-v1/claim-fees/src/get-position-fees.ts",
+      "damm-v1-claim-locked-fees": "tsx damm-v1/claim-fees/src/claim-locked-fees.ts",
+      "damm-v1-get-locked-fees": "tsx damm-v1/claim-fees/src/get-locked-fees.ts",
 
-      "damm-v2-lock-position": "tsx damm-v2/manange-position/src/lock-position.ts",
+      "damm-v2-lock-position": "tsx damm-v2/manage-position/src/lock-position.ts",
       "damm-v2-claim-position-fee": "tsx damm-v2/claim-fees/src/claim-position-fee.ts",
       "damm-v2-create-pool": "tsx damm-v2/create-pool/src/create-pool.ts",
-      "damm-v2-create-position": "tsx damm-v2/manange-position/src/create-position.ts",
-      "damm-v2-get-positions": "tsx damm-v2/manange-position/src/get-positions.ts",
+      "damm-v2-create-position": "tsx damm-v2/manage-position/src/create-position.ts",
+      "damm-v2-get-positions": "tsx damm-v2/manage-position/src/get-positions.ts",
+      "damm-v2-get-position-fees": "tsx damm-v2/claim-fees/src/get-position-fees.ts",
 
-      "damm-v2-get-postion-fees": "tsx damm-v2/claim-fees/src/get-position-fees.ts",
-
-      "dlmm-create-balance-position": "tsx dlmm/src/create-position/create-balanced-position.ts",
-      "dlmm-create-imbalance-position": "tsx dlmm/src/create-position/create-imbalanced-position.ts",
-      "dlmm-get-active-bin": "tsx dlmm/src/get-position/get-active-bin.ts",
-      "dlmm-get-positions-list": "tsx dlmm/src/get-position/get-positions-list.ts",
-      "dlmm-add-liquidity": "tsx dlmm/src/manage-position/add-balanced-liquidity.ts",
+      "dlmm-create-balance-position": "tsx dlmm/create-position/src/create-balanced-position.ts",
+      "dlmm-create-imbalance-position": "tsx dlmm/create-position/src/create-imbalanced-position.ts",
+      "dlmm-get-active-bin": "tsx dlmm/get-position/src/get-active-bin.ts",
+      "dlmm-get-positions-list": "tsx dlmm/get-position/src/get-positions-list.ts",
+      "dlmm-add-balanced-liquidity": "tsx dlmm/manage-position/src/add-balanced-liquidity.ts",
+      "dlmm-add-imbalanced-liquidity": "tsx dlmm/manage-position/src/add-imbalanced-liquidity.ts",
 
       "dbc-quickstart": "tsx dbc/quickstart/src/index.ts",
       "dbc-quicklaunch": "tsx dbc/quicklaunch/src/index.ts",
