fix: build errors

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "turbo lint",
     "format": "turbo format",
     "format:check": "turbo format:check",
+    "type-check": "tsc --noEmit -p tsconfig.typecheck.json",
     "clean": "turbo clean && rm -rf node_modules",
     "studio": "pnpm --filter @meteora-invent/studio",
     "scaffold": "pnpm --filter '@meteora-invent/scaffold-*'",
