--- a/packages/shared/utils/tsconfig.json
+++ b/packages/shared/utils/tsconfig.json
@@ -5,11 +5,6 @@
     "outDir": "./dist",
     "composite": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
