--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -6,12 +6,6 @@
     "noEmit": false,
     "composite": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.js"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["**/*.ts", "**/*.js"],
+  "exclude": ["node_modules", "dist"]
 }
