--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -4,6 +4,14 @@
   "private": true,
   "description": "Shared ESLint configuration for Meteora Invent monorepo",
   "main": "index.js",
+  "exports": {
+    ".": "./index.js",
+    "./index.js": "./index.js",
+    "./node": "./node.js",
+    "./node.js": "./node.js",
+    "./next": "./next.js",
+    "./next.js": "./next.js"
+  },
   "files": [
     "index.js",
     "next.js",
@@ -16,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3"
   },
