--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -4,7 +4,8 @@
     "rootDir": ".",
     "outDir": "./dist",
     "noEmit": false,
-    "composite": true
+    "composite": true,
+    "strictNullChecks": false
   },
   "include": ["**/*.ts", "**/*.js"],
   "exclude": ["node_modules", "dist"]
