fix: syncpack build

--- a/scaffolds/fun-launch/package.json
+++ b/scaffolds/fun-launch/package.json
@@ -12,34 +12,34 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.0",
+    "@coral-xyz/anchor": "^0.31.1",
     "@iconify-json/ic": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
     "@iconify-json/solar": "^1.2.2",
     "@iconify/tailwind": "^1.2.0",
     "@jup-ag/wallet-adapter": "^0.2.3",
-    "@meteora-ag/dynamic-bonding-curve-sdk": "^1.1.2",
+    "@meteora-ag/dynamic-bonding-curve-sdk": "^1.2.4",
     "@solana/spl-token": "^0.4.13",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-wallets": "^0.19.33",
-    "@solana/web3.js": "^1.95.1",
+    "@solana/web3.js": "^1.98.2",
     "@tailwindcss/cli": "^4.1.4",
     "@tanstack/react-form": "^1.2.3",
-    "@tanstack/react-query": "4.29.5",
+    "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.8",
     "@tanstack/zod-form-adapter": "^0.42.1",
     "aws-sdk": "^2.1692.0",
-    "bn.js": "^5.2.1",
+    "bn.js": "^5.2.2",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "decimal.js": "^10.5.0",
     "jotai": "^2.12.3",
     "ky": "^1.8.1",
-    "next": "15.3.1",
+    "next": "^15.3.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "radix-ui": "~1.3.4",
+    "radix-ui": "^1.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
@@ -60,10 +60,10 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^15.3.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "3.3.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.0"
   }
 }
