--- a/tsconfig.typecheck.json
+++ b/tsconfig.typecheck.json
@@ -1,22 +1,34 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "@meteora-invent/config/typescript/base",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@meteora-invent/config/*": ["./packages/config/*"],
+      "@meteora-invent/studio": ["./studio"],
+      "@meteora-invent/scaffold/*": ["./scaffolds/*"],
+      "@/*": ["./scaffolds/fun-launch/src/*"]
+    },
     "noEmit": true,
-    "jsx": "preserve",
-    "skipLibCheck": true
+    "composite": false,
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "lib": ["dom", "dom.iterable", "es6"],
+    "allowJs": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   },
-  "exclude": [
-    "**/node_modules",
-    "**/dist",
-    "**/build",
-    "**/.next",
-    "**/.turbo",
-    "**/out",
-    "**/*.d.ts",
-    "packages/config/dist",
-    "packages/shared/utils/dist",
-    "studio/dist",
-    "scaffolds/*/dist",
-    "scaffolds/*/.next"
-  ]
+  "include": [
+    "packages/**/*.ts",
+    "packages/**/*.tsx", 
+    "scaffolds/**/*.ts",
+    "scaffolds/**/*.tsx",
+    "studio/**/*.ts",
+    "studio/**/*.tsx"
+  ],
+  "exclude": ["node_modules", "dist", "build", ".next", ".turbo"]
 }
