--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,17 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**", "build/**"],
-      "env": ["NEXT_PUBLIC_*"]
+      "env": [
+        "NEXT_PUBLIC_*",
+        "CLOUDFLARE_ACCOUNT_ID",
+        "CLOUDFLARE_API_TOKEN",
+        "R2_ACCESS_KEY_ID",
+        "R2_SECRET_ACCESS_KEY",
+        "R2_ACCOUNT_ID",
+        "R2_BUCKET",
+        "RPC_URL",
+        "POOL_CONFIG_KEY"
+      ]
     },
     "dev": {
       "cache": false,
